# PlexMuxy

./: .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LOCALIZATION.md  README.CN.md  README.md  compressed.py  config.py  crowdin.yml  main.py  plexmuxy-cli.spec  plexmuxy-gui.spec  pyproject.toml  requirements.txt  subtitle_utility.py  subtitle_utils.py
.github/: dependabot.yml
.github/workflows/: integration.yml  release.yml  security.yml  test.yml
docs/: architecture.md  branch-strategy.md  font-rendering.md  performance-baseline.md  release-process.md  roadmap.md  security.md  troubleshooting.md  windows-release.md
docs/matroska-specs/: attachments.md  diagram.md  matroska-implement.md  ordering.md  tagging-audio-example.md  tagging-video-example.md  tagging.md  tags-precedence.md
docs/mkvmerge/: v100.md
locales/en-US/LC_MESSAGES/: base.po
locales/en/LC_MESSAGES/: base.mo  base.pot
locales/zh-CN/LC_MESSAGES/: base.mo  base.po  base.pot
logo/: README.md
packaging/: cli_entry.py  gui_entry.py  plexmuxy-gui.manifest  plexmuxy.iss
plexmuxy/: __init__.py  ass_analysis.py  ass_font_embedder.py  ass_rewrite.py  audio_preview.py  cleanup.py  cli.py  compatibility.py  config.py  dependencies.py  diagnostics.py  errors.py  font.py  font_cache.py  font_catalog.py  font_matching.py  font_prepare.py  font_subset.py  font_usage.py  i18n.py  job_store.py  jobs.py  logging_utils.py  matcher.py  models.py  muxer.py  overrides.py  plan_edit.py  planner.py  platform_paths.py  queue.py  report.py  scanner.py  serialization.py  service.py  snapshot.py  subtitle.py  tool_downloads.py  track_policy.py  update_check.py  (+1 more)
plexmuxy/integrations/: __init__.py  plex.py
plexmuxy/locales/: en.json  zh-CN.json
plexmuxy_gui/: __init__.py  activation.py  api.py  app.py  notifications.py  preferences.py
plexmuxy_gui/static/: app.css  app.js  i18n.js  index.html
plexmuxy_gui/static/js/: bindings.js  core.js  custom-select.js  diagnostics.js  dom-utils.js  jobs.js  locale.js  navigation.js  plan.js  results.js  settings.js  theme.js  tooltip.js  window.js
plexmuxy_gui/static/locales/: en.json  ru.json  zh-CN.json  zh-TW.json
scripts/: benchmark.py  build_installer.ps1  test-local.ps1  test-local.sh  verify_release.py
tests/: __init__.py  font_test_utils.py  test_activation.py  test_ass_analysis.py  test_ass_font_embedder.py  test_ass_rewrite.py  test_audio_preview.py  test_cleanup.py  test_cleanup_shared.py  test_cli.py  test_compatibility.py  test_config.py  test_config_migration.py  test_dependencies.py  test_dependency.py  test_diagnostics.py  test_font.py  test_font_cache.py  test_font_catalog.py  test_font_matching.py  test_font_prepare.py  test_font_safety.py  test_font_subset.py  test_gui_api.py  test_gui_app.py  test_gui_static.py  test_job_queue.py  test_job_store.py  test_matcher.py  test_matching_matrix.py  test_muxer.py  test_muxer_extended.py  test_notifications.py  test_overrides.py  test_plan_edit.py  test_planner.py  test_plex_integration.py  test_release_verifier.py  test_scanner.py  test_serialization.py  (+12 more)
tests/integration/: conftest.py  test_libass_render.py  test_real_mux.py
