[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexmuxy"
version = "0.2.0"
description = "Batch mux media files with external audio, subtitles, and fonts for Plex."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "patool>=2.2",
  "py7zr>=0.21",
  "pymkv>=1.0.8",
  "rich>=13.7",
  "setuptools<82",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
gui = [
  "pywebview>=6.0",
]
build = [
  "pyinstaller>=6",
]

[project.scripts]
plexmuxy = "plexmuxy.cli:main"
plexmuxy-gui = "plexmuxy_gui.app:main"

[tool.setuptools]
py-modules = ["main", "config", "subtitle_utils"]

[tool.setuptools.packages.find]
include = ["plexmuxy", "plexmuxy.*", "plexmuxy_gui", "plexmuxy_gui.*"]

[tool.setuptools.package-data]
plexmuxy_gui = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
]
