[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexmuxy"
dynamic = ["version"]
description = "Prepare Plex-compatible Matroska media with correctly identified tracks, subtitles, fonts, and metadata."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "patool>=2.2",
  "py7zr>=0.21",
  "pymkv2>=2.3.2",
  "rich>=13.7",
  "fonttools>=4.53",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]
gui = [
  "pywebview>=6.0",
]
build = [
  "pyinstaller>=6",
]

[project.scripts]
plexmuxy = "plexmuxy.cli:main"
plexmuxy-gui = "plexmuxy_gui.app:main"

[tool.setuptools]
py-modules = ["main", "config", "subtitle_utils"]

[tool.setuptools.dynamic]
version = {attr = "plexmuxy.__version__"}

[tool.setuptools.packages.find]
include = ["plexmuxy", "plexmuxy.*", "plexmuxy_gui", "plexmuxy_gui.*"]

[tool.setuptools.package-data]
plexmuxy = ["VERSION", "locales/*.json"]
plexmuxy_gui = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
  "static/assets/*.svg",
  "static/assets/*.png",
  "static/assets/*.ico",
  "static/locales/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires real ffmpeg and MKVToolNix binaries",
]

[tool.coverage.run]
branch = true
source = ["plexmuxy", "plexmuxy_gui"]
omit = [
  "plexmuxy/__main__.py",
  "plexmuxy/cli.py",
  "plexmuxy/diagnostics.py",
  "plexmuxy/logging_utils.py",
  "plexmuxy/report.py",
  "plexmuxy_gui/app.py",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
